Update personal information in index.html

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                 </code>
             </pre>
 
-            <p>I'm a software developer located in the Vancouver area of BC with an interest in backend development
-                and databases. Graduating with a Computer Systems diploma from BCIT (DEC 2024).</p>
+            <p>I'm a software developer located in the Vancouver area of BC. I graduated with a Computer Systems diploma from BCIT (Jan 2025).</p>
         </div>
     </header>
 
